--- a/KeyFob/KeyFob.csproj
+++ b/KeyFob/KeyFob.csproj
@@ -47,6 +47,10 @@
     <Compile Include="CredentialElementCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="web.config.uninstall.xdt" />
+    <None Include="web.config.install.xdt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
